--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--  main-elements css  -->
     <link rel="stylesheet" type="text/css" href="css/main-elements.css"/>
     <!--  main-elements css  -->
- 
+
 <!-- Google Fonts Here-->
 <!--Google Analytics-->
 <script>
@@ -28,7 +28,7 @@
 <!--Google Analytics-->
 
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet"/>
- 
+
  <!--    End of head ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
   </head>
   <body>
@@ -37,36 +37,36 @@
 <span style="cursor:pointer" onclick="openNav()"><i class="fa fa-bars fa-3x" aria-hidden="true"></i></span>
     </div>
     </div>
-    
+
 <!--    End of menu location------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 <div id="logo-location">
    <a href="index.html">
   <h5>ace</h5>
    </a>
 </div>
-    
+
 <!--    End of menu location------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
-  
+
   <div id="myNav" class="overlay">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <div class="overlay-content">
     <a href="about.html">About</a>
     <a href="#">Portfolio</a>
     <a href="mailto:arthur.edwards321@gmail.com">Contact</a>
-    <a target="_blank" href="RESUME_2017_ace.pdf" >Résumé</a>
+    <a target="_blank" href="RESUME_2017.pdf" >Résumé</a>
   </div>
 </div>
- 
+
  <!-- You can add more icons at http://fontawesome.io/icons/#brand -->
 <ul class="sticky-social-bar">
   <li class="social-icon">
-    <a href="mailto:arthur.edwards321@gmail.com"> 
+    <a href="mailto:arthur.edwards321@gmail.com">
       <i class="fa fa-envelope-o" aria-hidden="true"></i>
       <span class="social-icon-text">Send Email</span>
     </a>
   </li>
   <li class="social-icon">
-    <a target="_blank" href="RESUME_2017_ace.pdf">
+    <a target="_blank" href="RESUME_2017.pdf">
       <i class="fa fa-file-text-o" aria-hidden="true"></i>
       <span class="social-icon-text">My Résumé</span>
     </a>
@@ -82,14 +82,14 @@
       <i class="fa fa-instagram" aria-hidden="true"></i>
       <span class="social-icon-text">Instagram</span>
     </a>
-  </li> 
+  </li>
 </ul>
 <!-- end of the sticky social bar-->
- 
+
 <!-- End of Utility sticky nav-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
- 
- 
- 
+
+
+
  <Section id="full-display" class="">
      <a href="jax-ready.html">
         <div class="columns front-pres front-pres-1 small-12 medium-5 large-5">
@@ -101,9 +101,9 @@
          </div>
      </a>
  </Section>
- 
+
  <!-- End of Section-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
- 
+
   <Section id="full-display" class="">
     <a href="harn-museum.html">
      <div class="columns front-pres front-pres-3 small-12 medium-8 large-8">
@@ -114,9 +114,9 @@
      </div>
       </a>
  </Section>
- 
+
  <!-- End of Section-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
- 
+
  <Section id="full-display" class="">
     <a href="providers.html">
          <div class="columns front-pres front-pres-6 small-12 medium-3 large-5">
@@ -127,9 +127,9 @@
          </div>
      </a>
  </Section>
- 
+
  <!-- End of Section-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
- 
+
   <Section id="full-display" class="">
     <a href="fine-art.html">
          <div class="columns front-pres front-pres-7 small-12 medium-6 large-6">
@@ -140,7 +140,7 @@
          </div>
       </a>
  </Section>
- 
+
  <!-- End of Section-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
  <Section id="full-display" class="">
     <a href="photography.html">
@@ -148,11 +148,11 @@
          </div>
      </a>
      <a href="videos.html">
-         <div class="columns front-pres-10 front-pres small-12 medium-4 large-7"> 
+         <div class="columns front-pres-10 front-pres small-12 medium-4 large-7">
          </div>
      </a>
 </Section>
- 
+
  <!-- End of Section-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
@@ -163,6 +163,6 @@
 <!--    js file for the shrink nav ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
     <script src="js/shrink-nav.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
- 
+
   </body>
 </html>
