last resume change
changed on the about page

--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
              <br>
              <a href="mailto:arthur.edwards321@gmail.com">Send a quick note. </a>
              <br><br>
-             View <a target="_blank" href="RESUME_2017_ace.pdf">Résumé</a>
+             View <a target="_blank" href="RESUME_2017.pdf">Résumé</a>
         </p>
         <div class="column client small-12 medium-12 large-12">
         <p class="port-detail semi-bold-about">Notable Clients:
