--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.css"/>
     <!--  main-elements css  -->
     <link rel="stylesheet" type="text/css" href="css/main-elements.css"/>
+    <link rel="stylesheet" href="css/animate.min.css">
+    <link rel="stylesheet" href="css/animate.css">
     <!--  main-elements css  -->
 
 <!-- Google Fonts Here-->
@@ -30,6 +32,13 @@
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet"/>
 
  <!--    End of head ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+
+
+ <!-- <section class="wow slideInLeft" data-wow-duration="2s" data-wow-delay="5s">
+                    </section>
+
+                    <section class="wow slideInRight" data-wow-offset="10"  data-wow-iteration="10">
+                    </section> -->
   </head>
   <body>
  <div class="column small-12 medium-12 large-12 top-menu-bar">
@@ -92,12 +101,12 @@
 
  <Section id="full-display" class="">
      <a href="jax-ready.html">
-        <div class="columns front-pres front-pres-1 small-12 medium-5 large-5">
+        <div class="columns front-pres front-pres-1 small-12 medium-5 large-5 wow fadeInUp" data-wow-duration="0.7s" data-wow-offset="20" data-wow-delay="0.5s">
          <img src="" alt="">
         </div>
      </a>
      <a href="welcome-survey.html">
-         <div class="columns front-pres-2 front-pres small-12 medium-7 large-7">
+         <div class="columns front-pres-2 front-pres small-12 medium-7 large-7 wow fadeInUp" data-wow-duration="0.7s" data-wow-offset="20" data-wow-delay="0.5s">
          </div>
      </a>
  </Section>
@@ -106,11 +115,11 @@
 
   <Section id="full-display" class="">
     <a href="harn-museum.html">
-     <div class="columns front-pres front-pres-3 small-12 medium-8 large-8">
+     <div class="columns front-pres front-pres-3 small-12 medium-8 large-8 wow fadeInUp" data-wow-duration="0.7s" data-wow-delay="0.5s">
      </div>
       </a>
       <a href="new-perspective-cabinets.html">
-     <div class="columns front-pres-4 front-pres small-12 medium-4 large-4">
+     <div class="columns front-pres-4 front-pres small-12 medium-4 large-4 wow fadeInUp" data-wow-duration="0.7s" data-wow-offset="20" data-wow-delay="0.5s">
      </div>
       </a>
  </Section>
@@ -119,11 +128,11 @@
 
  <Section id="full-display" class="">
     <a href="providers.html">
-         <div class="columns front-pres front-pres-6 small-12 medium-3 large-5">
+         <div class="columns front-pres front-pres-6 small-12 medium-3 large-5 wow fadeInUp" data-wow-duration="0.7s" data-wow-offset="20" data-wow-delay="0.5s">
          </div>
      </a>
      <a href="members-homepage.html">
-         <div class="columns front-pres-5 front-pres small-12 medium-9 large-7">
+         <div class="columns front-pres-5 front-pres small-12 medium-9 large-7 wow fadeInUp" data-wow-duration="0.7s" data-wow-offset="20" data-wow-delay="0.5s">
          </div>
      </a>
  </Section>
@@ -132,11 +141,11 @@
 
   <Section id="full-display" class="">
     <a href="fine-art.html">
-         <div class="columns front-pres front-pres-7 small-12 medium-6 large-6">
+         <div class="columns front-pres front-pres-7 small-12 medium-6 large-6 wow fadeInUp" data-wow-duration="0.7s" data-wow-offset="20" data-wow-delay="0.5s">
          </div>
       </a>
       <a href="project-s.html">
-         <div class="columns front-pres-8 front-pres small-12 medium-6 large-6">
+         <div class="columns front-pres-8 front-pres small-12 medium-6 large-6 wow fadeInUp" data-wow-duration="0.7s" data-wow-offset="20" data-wow-delay="0.5s">
          </div>
       </a>
  </Section>
@@ -144,11 +153,11 @@
  <!-- End of Section-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
  <Section id="full-display" class="">
     <a href="photography.html">
-         <div class="columns front-pres front-pres-9 small-12 medium-8 large-5">
+         <div class="columns front-pres front-pres-9 small-12 medium-8 large-5 wow fadeInUp" data-wow-duration="0.7s" data-wow-offset="20" data-wow-delay="0.5s">
          </div>
      </a>
      <a href="videos.html">
-         <div class="columns front-pres-10 front-pres small-12 medium-4 large-7">
+         <div class="columns front-pres-10 front-pres small-12 medium-4 large-7 wow fadeInUp" data-wow-duration="0.7s" data-wow-offset="20" data-wow-delay="0.5s">
          </div>
      </a>
 </Section>
@@ -160,9 +169,14 @@
     <script src="js/app.js"></script>
 <!--    js file for the overlay -->
     <script src="js/nav-overlay.js"></script>
+
 <!--    js file for the shrink nav ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
     <script src="js/shrink-nav.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="js/wow.min.js"></script>
+              <script>
+              new WOW().init();
+              </script>
 
   </body>
 </html>
