--- a/photography.html
+++ b/photography.html
@@ -12,6 +12,8 @@
  <!--  main-elements css  -->
  <link rel="stylesheet" type="text/css" href="css/main-elements.css">
  <link rel="stylesheet" type="text/css" href="css/portfolio.css">
+ <link rel="stylesheet" href="css/animate.min.css">
+ <link rel="stylesheet" href="css/animate.css">
  <!--  main-elements css  -->
 
 <!-- Google Fonts Here-->
@@ -153,6 +155,10 @@
 <!--    js file for the shrink nav ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
     <script src="js/shrink-nav.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="js/wow.min.js"></script>
+              <script>
+              new WOW().init();
+              </script>
 
   </body>
 </html>
