micro animations added
animations for index page and general animations for all the other pages.

- ace

--- a/new-perspective-cabinets.html
+++ b/new-perspective-cabinets.html
@@ -109,9 +109,9 @@
 
 
  <Section id="portfolio-display" class="">
-    <h1 class="port-title">  New Perspective Cabinetry</h1>
-    <p class="port-detail"><span class="semi-bold">Problem:</span> <br> Take a popular interior design company's website into the modern web design era. Find a way to update the web components that showcases their work. </p>
-    <p class="port-detail"><span class="semi-bold">Solution:</span> <br> Create a website that has a large emphasis on photography of the company's product. An emphasis on the mobile first design influenced the layout of the content and photography. </p>
+    <h1 class="port-title wow fadeInUp" data-wow-duration="1.1s" data-wow-offset="0" data-wow-delay="0.4s">  New Perspective Cabinetry</h1>
+    <p class="port-detail wow fadeInUp" data-wow-duration="1.1s" data-wow-offset="0" data-wow-delay="0.5s"><span class="semi-bold">Problem:</span> <br> Take a popular interior design company's website into the modern web design era. Find a way to update the web components that showcases their work. </p>
+    <p class="port-detail wow fadeInUp" data-wow-duration="1.1s" data-wow-offset="0" data-wow-delay="0.6s"><span class="semi-bold">Solution:</span> <br> Create a website that has a large emphasis on photography of the company's product. An emphasis on the mobile first design influenced the layout of the content and photography. </p>
      <div class="column portfolio-1 small-12 medium-12 large-12">
         <img src="img/new-perspective-macbookair-ipad.jpeg" id="bg" alt="">
      </div>
