--- a/videos.html
+++ b/videos.html
@@ -110,7 +110,7 @@
 
 
  <Section id="portfolio-display" class="">
-    <h1 class="port-title">Video and Visual Effects</h1>
+    <h1 class="port-title wow fadeInUp" data-wow-duration="1.1s" data-wow-offset="0" data-wow-delay="0.4s">Video and Visual Effects</h1>
     <div class="column portfolio-2 small-12 medium-12 large-12 responsive-embed">
         <iframe src="https://player.vimeo.com/video/181740476" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
