--- a/welcome-survey.html
+++ b/welcome-survey.html
@@ -104,8 +104,8 @@
 
 <!-- End of Utility sticky nav-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
  <Section id="portfolio-display" class="">
-    <h1 class="port-title">Welcome Survey</h1>
-     <p class="port-detail">
+    <h1 class="port-title wow fadeInUp" data-wow-duration="1.1s" data-wow-offset="0" data-wow-delay="0.4s">Welcome Survey</h1>
+     <p class="port-detail wow fadeInUp" data-wow-duration="1.1s" data-wow-offset="0" data-wow-delay="0.5s">
        <span class="semi-bold">Problem:</span> <br> Re-design & update an introduction survey for new insurance members. This application’s main function is to gather high-level information about new insurance     members. <br><br>
        <span class="semi-bold">Solution:</span> <br> Create a simple and dynamic interface that displays survey questions in a card format. The main concept of the redesign was based on gamification.  This gamification concept helps the user feel empowered an involved in completing the survey.
      </p>
