--- a/fine-art.html
+++ b/fine-art.html
@@ -95,7 +95,7 @@
 
 
  <Section id="portfolio-display" class="">
-    <h1 class="port-title">Fine Art Background</h1>
+    <h1 class="port-title wow fadeInDown" data-wow-duration="1.1s" data-wow-offset="0" data-wow-delay="0.5s">Fine Art Background</h1>
      <div class="column portfolio-1 small-12 medium-12 large-12">
         <img src="img/Allison.jpg" id="bg" alt="">
 <!--        <img class="" src="../img/kiss-pink.png" height="inherit" width="inherit" alt="">-->
