--- a/harn-museum.html
+++ b/harn-museum.html
@@ -120,10 +120,10 @@
 
 
  <Section id="portfolio-display" class="">
-    <h1 class="port-title">The Harn Museum</h1>
-    <p class="port-detail">
-         <span class="semi-bold">Harn Museum of Art Internship:</span> <br> Working at the Harn Museum of Art has been simply fantastic. All the professional experiences have improved my flexibility as a designer. I was responsible for creating marketing materials and informational designs for the museum's events.
-        <br><br><span class="semi-bold">Internship Presentation & Branding Design:</span><br> The end of my internship I took the opportunity to share my experience at the Harn Museum. I explained the design behind different projects and gave my own interpretation of the branding design. This allowed me to share various marketing ideas with the directors and other staff members. (You will see presentation as you scroll)
+    <h1 class="port-title wow fadeInUp" data-wow-duration="1.1s" data-wow-offset="0" data-wow-delay="0.4s">The Harn Museum</h1>
+    <p class="port-detail wow fadeInUp" data-wow-duration="1.1s" data-wow-offset="0" data-wow-delay="0.5s">
+         <span class="semi-bold wow fadeInUp" data-wow-duration="1.1s" data-wow-offset="0" data-wow-delay="0.6s">Harn Museum of Art Internship:</span> <br> Working at the Harn Museum of Art has been simply fantastic. All the professional experiences have improved my flexibility as a designer. I was responsible for creating marketing materials and informational designs for the museum's events.
+        <br><br><span class="semi-bold wow fadeInUp" data-wow-duration="1.1s" data-wow-offset="0" data-wow-delay="0.9s">Internship Presentation & Branding Design:</span><br> The end of my internship I took the opportunity to share my experience at the Harn Museum. I explained the design behind different projects and gave my own interpretation of the branding design. This allowed me to share various marketing ideas with the directors and other staff members. (You will see presentation as you scroll)
     </p>
     <div class="column portfolio-2 small-12 medium-12 large-12">
                  <img src="img/Facing_it_Full_page.jpg" id="bg" alt="">
