--- a/jax-ready.html
+++ b/jax-ready.html
@@ -120,9 +120,9 @@
 
 
  <Section id="portfolio-display" class="">
-    <h1 class="port-title">Jax Ready:(Weather Alert App)</h1>
-    <p class="port-detail"><span class="semi-bold">Problem:</span> <br> Design and re-imagine how the weather alert application looks on mobile devices. This application must still provide the user different shelter options and relative evacuation status.</p>
-    <p class="port-detail"><span class="semi-bold">Solution:</span> <br>Create a modern UI treatment of maps and CTA's that allow the user a simple flow to find desired weather information. This user flow helps the users find locations, shetlers and contact information quickly.</p>
+    <h1 class="port-title wow fadeInUp" data-wow-duration="1.1s" data-wow-offset="0" data-wow-delay="0.4s">Jax Ready:(Weather Alert App)</h1>
+    <p class="port-detail wow fadeInUp" data-wow-duration="1.1s" data-wow-offset="0" data-wow-delay="0.5s"><span class="semi-bold wow fadeInUp" data-wow-duration="1.1s" data-wow-offset="0" data-wow-delay="0.4s">Problem:</span> <br> Design and re-imagine how the weather alert application looks on mobile devices. This application must still provide the user different shelter options and relative evacuation status.</p>
+    <p class="port-detail wow fadeInUp" data-wow-duration="1.1s" data-wow-offset="0" data-wow-delay="0.6s"><span class="semi-bold">Solution:</span> <br>Create a modern UI treatment of maps and CTA's that allow the user a simple flow to find desired weather information. This user flow helps the users find locations, shetlers and contact information quickly.</p>
      <div class="column portfolio-3 small-12 medium-12 large-12">
          <img src="img/iphone-6s-jax%20ready%20appview.jpeg" id="bg" alt="">
      </div>
