--- a/members-homepage.html
+++ b/members-homepage.html
@@ -120,9 +120,9 @@
 
 
  <Section id="portfolio-display" class="">
-    <h1 class="port-title">Member Homepage</h1>
-    <p class="port-detail"><span class="semi-bold">Problem:</span> <br> Reimagine the homepage for insurance members. This should update the interactions and layout of the page.</p>
-    <p class="port-detail"><span class="semi-bold">Solution:</span> <br>Design the homepage with simple and short CTA's that allow for content reveal. This allows the user to get desired dashboard overview and the option of retrieving more detailed information with one click.</p>
+    <h1 class="port-title wow fadeInUp" data-wow-duration="1.1s" data-wow-offset="0" data-wow-delay="0.4s">Member Homepage</h1>
+    <p class="port-detail wow fadeInUp" data-wow-duration="1.1s" data-wow-offset="0" data-wow-delay="0.5s"><span class="semi-bold">Problem:</span> <br> Reimagine the homepage for insurance members. This should update the interactions and layout of the page.</p>
+    <p class="port-detail wow fadeInUp" data-wow-duration="1.1s" data-wow-offset="0" data-wow-delay="0.6s"><span class="semi-bold">Solution:</span> <br>Design the homepage with simple and short CTA's that allow for content reveal. This allows the user to get desired dashboard overview and the option of retrieving more detailed information with one click.</p>
      <div class="column portfolio-1 small-12 medium-12 large-12">
         <img src="img/%20MWE%20opt%20macbook-air-at-coffee.jpg" id="bg" alt="">
      </div>
