--- a/photography.html
+++ b/photography.html
@@ -117,7 +117,7 @@
 
 <!-- End of Utility sticky nav-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 <Section id="portfolio-display" class="">
-    <h1 class="port-title">Photography</h1>
+    <h1 class="port-title wow fadeInUp" data-wow-duration="1.1s" data-wow-offset="0" data-wow-delay="0.4s">Photography</h1>
      <div class="column portfolio-1 small-12 medium-12 large-12">
         <img src="img/beach-two.jpg" id="bg" alt="">
      </div>
