--- a/project-s.html
+++ b/project-s.html
@@ -119,8 +119,8 @@
 
 
  <Section id="portfolio-display" class="">
-    <h1 class="port-title">Project-S</h1>
-    <p class="port-detail">
+    <h1 class="port-title wow fadeInUp" data-wow-duration="1.1s" data-wow-offset="0" data-wow-delay="0.4s">Project-S</h1>
+    <p class="port-detail wow fadeInUp" data-wow-duration="1.1s" data-wow-offset="0" data-wow-delay="0.5s">
     <span class="semi-bold">Problem:</span> <br>Problem: Re-create the designated print magazine so that the content is easily viewable and accessible on an iPad. <br><br>
     <span class="semi-bold">Solution:</span><br> Simplify the pages from the print magazine so that the content is viewable from a fixed location. This will allow the user to scroll through the photos without disrupting the text on each section.</p>
     <p class="port-detail"></p>
