--- a/providers.html
+++ b/providers.html
@@ -120,11 +120,11 @@
 
 
  <Section id="portfolio-display" class="">
-    <h1 class="port-title">Providers Landing Page</h1>
-    <p class="port-detail"><span class="semi-bold">Visual Designers:</span> Arthur Charles Edwards <br>
+    <h1 class="port-title wow fadeInUp" data-wow-duration="1.1s" data-wow-offset="0" data-wow-delay="0.4s">Providers Landing Page</h1>
+    <p class="port-detail wow fadeInUp" data-wow-duration="1.1s" data-wow-offset="0" data-wow-delay="0.5s"><span class="semi-bold">Visual Designers:</span> Arthur Charles Edwards <br>
     <span class="semi-bold">Developer:</span> Michael Conrad
-     <p class="port-detail">
-    <p class="port-detail">
+     <p class="port-detail wow fadeInUp" data-wow-duration="1.1s" data-wow-offset="0" data-wow-delay="0.6s">
+    <p class="port-detail wow fadeInUp" data-wow-duration="1.1s" data-wow-offset="0" data-wow-delay="0.7s">
       <span class="semi-bold">Problem:</span> Create a new design for the healthcare providers landing page. This is located on the corporate landing page and should be an introduction of the user to different enrollment portals. <br><br>
       <span class="semi-bold">Solution:</span> Design a landing page that has modern spacing and simplistic section design. This will allow the user to clearly find desired information and understand what content is designated to the different sections.</p>
      <div class="column portfolio-1 small-12 medium-12 large-12">
