updated footer and icons
Added styles to all pages

- ace

--- a/photography.html
+++ b/photography.html
@@ -146,6 +146,18 @@
 </Section>
 
  <!-- End of Section-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+
+ <Section id="footer-style">
+     <div class="small-12 medium-12 large-12 text-center float-center footer-link-style columns flex">
+       <ul class="menu align-center flex-list">
+            <li class="link-style-footer"><a target="_blank" href="RESUME_2017.pdf"> <i class="fa fa-file-text" aria-hidden="true"></i> Résumé</a></li>
+            <li class="link-style-footer"><a href="mailto:arthur.edwards321@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i> Email</a></li>
+            <li class="link-style-footer"><a href="about.html"><i class="fa fa-user" aria-hidden="true"></i> About</a></li>
+          </ul>
+     </div>
+ </Section>
+
+ <!-- end of the footer-section ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
     <script src="js/vendor/foundation.js"></script>
